[package]
name = "big_iron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-timers = { version = "0.2.4", features = ["futures"] }
sycamore = { version="0.8", features = ["suspense"] }
chrono = { version="0.4" }
