[package]
name = "meshetar_client"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-timers = { version = "0.2.4", features = ["futures"] }
sycamore = { version="0.8", features = ["suspense"] }
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.24", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ['console'] }
chrono = { version = "0.4", features = ["serde"] }
