[package]
authors = ["Mitja Belak"]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
plotters = { version = "0.3.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
binance_spot_connector_rust = { version = "1", features=["enable-hyper"], path = "../../binance-spot-connector-rust" }
hyper-tls = "0.5.0"
hyper = "0.14"
toml = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
lazy_static = "1.4.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite"] }
log = "0.4.0"
env_logger = "0.9.0"
