[package]
authors = ["Mitja Belak"]
edition = "2021"
name = "meshetar_server"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
plotters = { version = "0.3.5" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
binance_spot_connector_rust = { version = "1", features = [
  "enable-hyper",
  "enable-tokio-tungstenite",
], path = "../../binance-spot-connector-rust" }
hyper-tls = "0.5.0"
hyper = "0.14.27"
toml = "0.8.6"
tokio = { version = "1.33", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
lazy_static = "1.4.0"
sqlx = { version = "0.7.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "chrono",
] }
log = "0.4.20"
env_logger = "0.10.0"
strum = { version = "0.25", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.50"
uuid = { version = "1.5", features = ["v4"] }
cpython = { version = "0.7.1" }
prettytable-rs = "0.10.0"
